force-app/main/default/objects/HAM_Giving_Summary_Line_Item__c/HAM_Giving_Summary_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Represents an individual line item within a Giving Summary, capturing designation-level gift commitments and payments for a fiscal year.</description>
    <label>Giving Summary Line Item</label>
    <nameField>
        <displayFormat>GSLI-{0000}</displayFormat>
        <label>Giving Summary Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Giving Summary Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>