force-app/main/default/objects/HAM_Giving_Summary_Line_Item__c/fields/HAM_Committed__c.field-meta.xml
<CustomField>
    <fullName>HAM_Committed__c</fullName>
    <description>The total committed gift amount for this designation in the fiscal year.</description>
    <inlineHelpText>Enter the total amount pledged or committed for this designation.</inlineHelpText>
    <label>Committed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>