force-app/main/default/objects/HAM_Giving_Summary_Line_Item__c/fields/HAM_Designation__c.field-meta.xml
<CustomField>
    <fullName>HAM_Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Designation associated with this line item.</description>
    <inlineHelpText>Select the designation that this gift is allocated toward.</inlineHelpText>
    <label>Designation</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Giving Summary Line Items</relationshipLabel>
    <relationshipName>Giving_Summary_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>