force-app/main/default/objects/HAM_Giving_Summary_Line_Item__c/fields/HAM_External_ID__c.field-meta.xml
<CustomField>
    <fullName>HAM_External_ID__c</fullName>
    <description>Unique external identifier combining Giving Summary ID, Designation ID, and Giving Summary Name (FY). Populated via Apex.</description>
    <externalId>true</externalId>
    <inlineHelpText>System-generated field. Do not edit manually.</inlineHelpText>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>