force-app/main/default/objects/HAM_Giving_Summary_Line_Item__c/fields/HAM_Giving_Summary__c.field-meta.xml
<CustomField>
    <fullName>HAM_Giving_Summary__c</fullName>
    <description>Master-detail relationship to the parent Giving Summary record.</description>
    <inlineHelpText>Select the Giving Summary this line item belongs to.</inlineHelpText>
    <label>Giving Summary</label>
    <referenceTo>HAM_Pledge_Balance__c</referenceTo>
    <relationshipLabel>Giving Summary Line Items</relationshipLabel>
    <relationshipName>Giving_Summary_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>