force-app/main/default/objects/HAM_Giving_Summary_Line_Item__c/fields/HAM_Paid__c.field-meta.xml
<CustomField>
    <fullName>HAM_Paid__c</fullName>
    <description>The total amount paid toward this designation in the fiscal year.</description>
    <inlineHelpText>Enter the total amount that has been received/paid for this designation.</inlineHelpText>
    <label>Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>