force-app/main/default/objects/HAM_Giving_Summary_Line_Item__c/fields/HAM_Purpose_Name__c.field-meta.xml
<CustomField>
    <fullName>HAM_Purpose_Name__c</fullName>
    <description>The stated purpose or name associated with this gift line item.</description>
    <inlineHelpText>Enter the purpose or description for this gift designation.</inlineHelpText>
    <label>Purpose Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>